[gd_scene load_steps=9 format=3 uid="uid://dxdr2csj5224q"]

[ext_resource type="Script" path="res://game/pause_menu/pause_menu.gd" id="1_p6lrv"]
[ext_resource type="Texture2D" uid="uid://bp8dud3e3l3ux" path="res://assets/icons/24/close.png" id="2_f1wav"]
[ext_resource type="FontFile" uid="uid://bs5dy8ahwm5ug" path="res://assets/fonts/VT323/VT323-Regular.ttf" id="3_jqomc"]
[ext_resource type="Texture2D" uid="uid://7ec4btyloash" path="res://assets/icons/24/volume_up.png" id="4_32gad"]
[ext_resource type="Texture2D" uid="uid://jy4153ntel28" path="res://assets/icons/24/replay.png" id="5_8nly2"]
[ext_resource type="Theme" uid="uid://dqjnfau1d3s6w" path="res://game/UI/button/theme.tres" id="5_kmis1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_125hd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trnug"]
bg_color = Color(0.758002, 0.878282, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 20

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_p6lrv")

[node name="Background" type="ColorRect" parent="."]
offset_left = -1424.0
offset_top = -1328.0
offset_right = 2880.0
offset_bottom = 3384.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0235294, 0.113725, 0.329412, 1)

[node name="Root" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -896.0
offset_right = 484.0
offset_bottom = 896.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
metadata/_edit_use_anchors_ = true

[node name="Header" type="HBoxContainer" parent="Root"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseMenu" type="Button" parent="Root/Header"]
layout_mode = 2
theme = ExtResource("5_kmis1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_125hd")
icon = ExtResource("2_f1wav")

[node name="TitleContainer" type="CenterContainer" parent="Root"]
layout_mode = 2
size_flags_vertical = 2

[node name="Title" type="Label" parent="Root/TitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_jqomc")
theme_override_font_sizes/font_size = 230
text = "Paused"

[node name="HBoxContainer" type="HBoxContainer" parent="Root"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Root/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Root/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_32gad")

[node name="HSeparator" type="HSeparator" parent="Root/HBoxContainer"]
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="Root/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_trnug")
max_value = 1.0
step = 0.1
value = 1.0

[node name="MarginContainer3" type="MarginContainer" parent="Root/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="Root"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Replay" type="Button" parent="Root/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_kmis1")
icon = ExtResource("5_8nly2")
icon_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Root"]
custom_minimum_size = Vector2(50, 120)
layout_mode = 2

[connection signal="pressed" from="Root/Header/CloseMenu" to="." method="_on_close_menu_pressed"]
[connection signal="value_changed" from="Root/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="Root/Footer/Replay" to="." method="_on_replay_pressed"]
